# game24-rl

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  environment-train.yml  init.sh  pyproject.toml
configs/: sft_v1.yaml  sft_v3_checked_chat.yaml
docs/: baselines.md  experiment_plan.md  overview.md
docs/adr/: 0001-use-course-model-as-primary.md  0002-establish-sft-before-grpo.md  0003-use-r1-wrapped-short-success-traces.md  0004-use-multiset-isolated-splits.md  0005-train-standard-game24-first.md  0006-use-first-pass-sft-set.md  0007-use-lora-for-first-sft.md  0008-prioritize-sft-loop-before-grpo-implementation.md  0009-use-transformers-peft-trl-stack.md  0010-use-lightweight-package-structure.md  0011-use-single-answer-contract.md  0012-use-strict-ast-fraction-verifier.md  0013-use-explicit-sft-success-gates.md
docs/architecture/: deployment-runbook.md  evaluation-foundation.md  remote-sft-runbook.md  remote-training-operations.md
docs/datasets/: nlile_24_game_readme.md
docs/experiments/: baseline_gap_analysis.md  countdown_adaptation_plan_20260619.md  (+14 more)
harness/: bootstrap-contract.md  current-mode.md  decisions.md  evaluator-rubric.md  feature_list.json  observability.md  progress.md  quality.md  session-handoff.md
scripts/: audit_eval_by_tot_rank.py  audit_hf_dataset_overlap.py  audit_sft_dataset.py  audit_standard_vs_nlile.py  bootstrap_conda_env.sh  build_countdown_fast_sft_data.py  build_countdown_grpo_manifest_from_sft_jsonl.py  build_countdown_manifest.py  build_countdown_sft_data.py  build_countdown_stratified_eval_manifest.py  build_grpo_pool.py  build_handoff1_grpo_pool.py  build_official_tot_manifest.py  build_sft_case_study.py  build_sft_v1.py  diagnose_sft_batch.py  diagnose_sft_overfit.py  eval_checkpoint.py  export_training_metrics.py  harness-check.sh  make_splits.py  probe_generation_modes.py  remote_readiness.sh  summarize_tot_eval_groups.py  train_grpo.py  train_sft.py
tests/: test_countdown_solver.py  test_data_gen.py  test_grpo_pool.py  test_grpo_rewards.py  test_solver.py  test_training_pipeline.py  test_verifier.py
(+53 files in other folders)
