[project]
name = "game24-rl"
version = "0.1.0"
description = "SFT and GRPO experiments for a 24-point game solver."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
train = [
  "accelerate",
  "datasets",
  "peft",
  "torch",
  "transformers",
  "trl",
]

[project.scripts]
game24-build-sft-v1 = "game24_rl.cli:build_sft_v1_main"
game24-eval-checkpoint = "game24_rl.cli:eval_checkpoint_main"
game24-make-splits = "game24_rl.cli:make_splits_main"
game24-train-sft = "game24_rl.cli:train_sft_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
